@@ -26,13 +26,21 @@
     <properties>
         <sonar.sources>src/main</sonar.sources>
         <sonar.tests>src/test</sonar.tests>
-        <!-- Below property indicates the pattern of the test suite -->
-        <runSuite>**/*Test.class</runSuite>
-        <!-- Sonar-JaCoCo properties -->
+        <!-- Below property indicates the pattern of the test suite --><!-- Sonar-JaCoCo properties -->
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
         <sonar.jacoco.itReportPath>${project.basedir}/target/jacoco-it.exec</sonar.jacoco.itReportPath>
         <sonar.language>java</sonar.language>
+
+        <sonar.exclusions>
+            **/config/*,
+            **/exception/*,
+            **/dto/*,
+            **/event/*,
+            **/entity/*,
+            **/model/*
+        </sonar.exclusions>
     </properties>
 
     <profiles>
@@ -84,19 +92,21 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <!-- Below plugin ensures the execution of test cases during maven build-->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.20</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.maven.surefire</groupId>
+                                <artifactId>surefire-testng</artifactId>
+                                <version>2.20</version>
+                            </dependency>
+                        </dependencies>
                         <configuration>
-                            <includes>
-                                <include>${runSuite}</include>
-
-                                <skipTests>${skipTests}</skipTests>
-                            </includes>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                         </configuration>
                     </plugin>
-
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
@@ -107,10 +117,6 @@
                                     <goal>integration-test</goal>
                                     <goal>verify</goal>
                                 </goals>
-                                <configuration>
-                                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
-                                    <skipTests>${skipTests}</skipTests>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
